[gd_scene load_steps=10 format=3 uid="uid://b0vh7aie5kur4"]

[ext_resource type="Script" uid="uid://c54sl1h52ow8o" path="res://microgames/open_slack/app.gd" id="1_dx23g"]
[ext_resource type="Texture2D" uid="uid://dm7hijyshc3nc" path="res://assets/Slack_icon_2019.svg" id="2_tsn44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dx23g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tsn44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t6i4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vc42m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ewvl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fr400"]
bg_color = Color(0.95, 0.7904, 0.41799998, 0.65882355)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l4r3"]
bg_color = Color(0.95, 0.7904, 0.41799998, 0.65882355)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9529412, 0.7882353, 0.41568628, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Application" type="Button"]
custom_minimum_size = Vector2(100, 110)
offset_right = 100.0
offset_bottom = 110.0
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_dx23g")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tsn44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t6i4k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vc42m")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ewvl")
script = ExtResource("1_dx23g")

[node name="Hover" type="Panel" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 114.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fr400")

[node name="Selected" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 100.0
offset_bottom = 114.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3l4r3")

[node name="App" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(80, 100)
layout_mode = 0
offset_left = 10.0
offset_right = 90.0
offset_bottom = 105.0
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="App"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_tsn44")
expand_mode = 4

[node name="Control" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
anchors_preset = 0
offset_top = 72.5
offset_right = 100.0
offset_bottom = 112.5
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Slack"
fit_content = true
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
